--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body{
+    font-family: "Montserrat", sans-serif;
+}
+p{
+    @apply text-[#BBBEC7] text-base font-semibold text-sm
+    lg:text-base
+}
+a{
+    @apply text-[#553BF1] cursor-pointer font-semibold text-sm
+    lg:text-base
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Form Styles */
+label{
+    @apply flex flex-col mb-[1em] w-full
 }
+
+span{
+    @apply mb-[.3em] font-bold text-left text-base
+    lg:text-base
+}
+
+input, textarea{
+    @apply py-[.8em] bg-transparent w-full text-sm text-gray-500
+    border-b-[1px] border-solid border-[#CCC] focus:border-[#BBB] focus:outline-none
+    lg:w-[80%] lg:text-base
+
+}
+
+
