--- a/src/components/Buttons/Btn-Variant.css
+++ b/src/components/Buttons/Btn-Variant.css
@@ -1,7 +1,7 @@
 .Btn-Google{
     @apply bg-gradient-to-r from-[#F6A742] to-[#DF638B]
     text-white cursor-pointer rounded-full font-semibold border-none text-sm w-full px-10 py-3
-    flex flex-row items-center
+    flex flex-row items-center justify-center
     lg:text-base lg:px-10 lg:py-3 lg:w-auto
     transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-gradient-to-l duration-300
 
@@ -14,8 +14,8 @@
 
 .Btn-Facebook{
     @apply bg-gray-200
-    text-black cursor-pointer rounded-full font-semibold border-none text-sm w-full  px-10 py-3
-    flex flex-row items-center
+    text-black cursor-pointer rounded-full font-semibold border-none text-sm w-full px-10 py-3
+    flex flex-row items-center justify-center
     lg:text-base lg:px-10 lg:py-3 lg:w-auto
     transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-blue-200 duration-300
 
