--- a/src/components/Sign In/SignUp.css
+++ b/src/components/Sign In/SignUp.css
@@ -1,4 +1,4 @@
-.SignInContainer{
+.SignUpContainer{
     @apply flex flex-col w-[80%] h-full py-4 justify-between
     lg:py-14
 }
@@ -33,7 +33,7 @@
     @apply flex flex-col w-full justify-between
     lg:flex-row
 }
-.SignInForm{
+.SignUpForm{
     @apply flex flex-col w-full mt-10
 }
 .error{
