--- a/src/components/Sign In/SignUp.css
+++ b/src/components/Sign In/SignUp.css
@@ -19,7 +19,7 @@
 
 .FormContent{
     @apply flex flex-col w-full mb-[2em] mt-10
-    lg:mb-[12em] lg:mt-0
+    lg:mb-[12em]
 }
 .FormTittle{
     @apply text-3xl font-bold text-center
